--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
   - cd laravellogger
   - composer self-update
   - composer install --prefer-source --no-interaction
-  - composer require bexvibi/laravel-logger
+  - composer require vildanbina/laravel-logger
   - php artisan key:generate
   - php artisan vendor:publish --tag=LaravelLogger
   - composer dump-autoload
